templates/service/graphdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphdb
spec:
  ports:
  - name: graphdb
    port: 8890
    targetPort: 8890
  selector:
    app: graphdb
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
